# augenai

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  roadmap.md  roadmap_es.md  turbo.json
.husky/: pre-commit
apps/ai-service/: README.md  package.json  pyproject.toml
apps/ai-service/src/ai-service/: __init__.py  config.py  main.py
apps/ai-service/src/ai-service/models/: schemas.py
apps/ai-service/src/ai-service/routers/: __init__.py  api.py  health.py  predictions.py
apps/ai-service/src/ai-service/services/prediction/: model_pool.py  service.py
apps/ai-service/src/ai-service/services/prediction/factories/: __init__.py  hf.py  model_instance.py
apps/ai-service/src/ai_service/: __init__.py  main.py
apps/ai-service/src/ai_service/models/: schemas.py
apps/ai-service/src/ai_service/routers/: api.py
apps/ai-service/src/ai_service/services/prediction/: model_pool.py
apps/ai-service/src/ai_service/services/prediction/factories/: hf.py
apps/ai-service/tests/: conftest.py
apps/ai-service/tests/services/prediction/factories/: test_hf.py
apps/ai_service/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  package.json  pyproject.toml
apps/ai_service/src/ai_service/: config.py  logging_config.py  main.py
apps/ai_service/src/ai_service/auth/: auth.py
apps/ai_service/src/ai_service/models/: schemas.py
apps/ai_service/src/ai_service/routers/: __init__.py  api.py  health.py  predictions.py
apps/ai_service/src/ai_service/services/: __init__.py
apps/ai_service/src/ai_service/services/model/: __init__.py  adapter_registry.py  base_adapter.py  decorators.py  hf.py  pytorch_custom.py  segmentation.py  service.py  task_mapper.py  ultralytics.py
apps/ai_service/src/ai_service/services/prediction/: __init__.py  model_pool.py  service.py
apps/ai_service/src/ai_service/utils/: __init__.py  model_handler.py
apps/ai_service/tests/: conftest.py
apps/ai_service/tests/model/: test_model_service.py
apps/ai_service/tests/prediction/: test_model_pool.py  test_prediction_service.py
apps/ai_service/tests/prediction/factories/: test_hf.py  test_processor.py  test_pytorch_custom.py  test_segmentation.py  test_segmentation_scaling.py  test_ultralytics.py
apps/ai_service/tests/routers/: conftest.py  test_predictions.py
apps/ai_service/weights/glaucoma_resnet18_density/: .gitattributes  OCT_Glaucoma_Classifier-november.pt
apps/ai_service/weights/resnet34_unet/: best_model.pt
scripts/: link-types.sh
(+398 files in other folders)
