[project]
name = "ai-service"
version = "0.1.0"
description = ""
authors = [
    {name = "rralbertorman",email = "rr.albertorman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.118.3,<0.119.0)",
    "pillow (>=10.0.0)",
    "numpy (>=1.24.0)"
]

[tool.poetry]
packages = [{include = "ai-service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
