[project]
name = "ai-service"
version = "0.1.0"
description = ""
authors = [{name = "rralbertorman", email = "rr.albertorman@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi[standard]>=0.118.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "pydantic-settings>=2.11.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
