[project]
name = "ai_service"
version = "0.1.0"
description = "A FastAPI application for AI-powered image predictions"
authors = [{name = "rralbertorman", email = "rr.albertorman@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]>=0.118.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "pydantic-settings>=2.11.0",
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.34.0",
    "ultralytics>=8.3.231",
    "safetensors>=0.4.0",
    "opencv-python-headless>=4.5.0",
    "numpy>=1.26.0",
    "amd-biomarker @ git+ssh://git@github.com/rralbertoroman/amd-biomarker.git",
]

[project.scripts]
ai_service = "ai_service.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.6",
]
